--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
           <a class="main-logo main-navi logo link" href="./index.html"
             >Web<span class="span-main">Studio</span></a
           >
-          <ul class="menu menu-gap list">
+          <ul class="menu list">
             <li class="menu-item">
-              <a class="link main-link main-navi-link" href="./index.html"
+              <a
+                class="menu-gap link main-link main-navi-link"
+                href="./index.html"
                 >Studio</a
               >
             </li>
@@ -61,7 +63,7 @@
     </header>
 
     <main>
-      <!----------------------------SECTION1---------------------------------------------->
+      <!----------------------------SECTION 1---------------------------------------------->
       <section class="container-first main-section-one">
         <div class="container">
           <h1 class="title-efectiwe">Effective Solutions for Your Business</h1>
@@ -69,9 +71,34 @@
           <button class="button-main" type="button">Order Service</button>
         </div>
       </section>
-      <!------------------------------Section2---------------------------------------------->
+      <!------------------------------Section 2---------------------------------------------->
 
       <section class="section-benefits">
+        <div class="benefits-icon">
+          <h2 class="visually-hidden">Out benefits icons</h2>
+          <ul class="icon-list">
+            <li class="icon-item">
+              <a href="#" class="benefits-link-icon"></a>
+              <svg width="64" height="64" class="benefits-social-icon"></svg>
+              <use href="./images/icons/sprite.svg.svg#icon-antenna-1"></use>
+            </li>
+            <li class="icon-item">
+              <a href="#" class="benefits-link-icon"></a>
+              <svg width="64" height="64" class="benefits-social-icon"></svg>
+              <use href="./images/icons/sprite.svg.svg#icon-antenna-1"></use>
+            </li>
+            <li class="icon-item">
+              <a href="" class="benefits-link-icon"></a>
+              <svg width="64" height="64" class="benefits-social-icon"></svg>
+              <use href="./images/icons/sprite.svg.svg#icon-antenna-1"></use>
+            </li>
+            <li class="icon-item">
+              <a href="" class="benefits-link-icon"></a>
+              <svg width="64" height="64" class="benefits-social-icon"></svg>
+              <use href="./images/icons/sprite.svg.svg#icon-antenna-1"></use>
+            </li>
+          </ul>
+        </div>
         <div class="container container-benefits">
           <h2 class="visually-hidden">Out benefits</h2>
           <ul class="menu-wrap menu-gap-next menu list">
@@ -126,7 +153,7 @@
                   <ul class="social-list list">
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-instagram-2"
                           ></use>
@@ -135,7 +162,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-Group"
                           ></use>
@@ -144,7 +171,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-facebook-1"
                           ></use>
@@ -153,7 +180,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-linkedin-1"
                           ></use>
@@ -179,7 +206,7 @@
                   <ul class="social-list list">
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-instagram-2"
                           ></use>
@@ -188,7 +215,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-Group"
                           ></use>
@@ -197,7 +224,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-facebook-1"
                           ></use>
@@ -206,7 +233,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-linkedin-1"
                           ></use>
@@ -232,7 +259,7 @@
                   <ul class="social-list list">
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-instagram-2"
                           ></use>
@@ -241,7 +268,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-Group"
                           ></use>
@@ -250,7 +277,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-facebook-1"
                           ></use>
@@ -259,7 +286,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-linkedin-1"
                           ></use>
@@ -285,7 +312,7 @@
                   <ul class="social-list list">
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-instagram-2"
                           ></use>
@@ -294,7 +321,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-Group"
                           ></use>
@@ -303,7 +330,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-facebook-1"
                           ></use>
@@ -312,7 +339,7 @@
                     </li>
                     <li class="social-list-item">
                       <a href="#" class="social-list-link">
-                        <svg class="social-list-icon">
+                        <svg width="12" height="12" class="social-list-icon">
                           <use
                             href="./images/icons/sprite.svg.svg#icon-linkedin-1"
                           ></use>
