--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
             <li class="icon-item">
               <a href="#" class="benefits-link-icon"></a>
               <svg width="64" height="64" class="benefits-social-icon"></svg>
-              <use href="./images/icons/sprite.svg.svg#icon-antenna-1"></use>
+              <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
             </li>
             <li class="icon-item">
               <a href="#" class="benefits-link-icon"></a>
               <svg width="64" height="64" class="benefits-social-icon"></svg>
-              <use href="./images/icons/sprite.svg.svg#icon-antenna-1"></use>
+              <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
             </li>
             <li class="icon-item">
               <a href="" class="benefits-link-icon"></a>
               <svg width="64" height="64" class="benefits-social-icon"></svg>
-              <use href="./images/icons/sprite.svg.svg#icon-antenna-1"></use>
+              <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
             </li>
             <li class="icon-item">
               <a href="" class="benefits-link-icon"></a>
               <svg width="64" height="64" class="benefits-social-icon"></svg>
-              <use href="./images/icons/sprite.svg.svg#icon-antenna-1"></use>
+              <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
             </li>
           </ul>
         </div>
@@ -155,7 +155,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-instagram-2"
+                            href="./images/icons/sprite.svg#icon-instagram-2"
                           ></use>
                         </svg>
                       </a>
@@ -164,7 +164,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-Group"
+                            href="./images/icons/sprite.svg#icon-Group"
                           ></use>
                         </svg>
                       </a>
@@ -173,7 +173,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-facebook-1"
+                            href="./images/icons/sprite.svg#icon-facebook-1"
                           ></use>
                         </svg>
                       </a>
@@ -182,7 +182,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-linkedin-1"
+                            href="./images/icons/sprite.svg#icon-linkedin-1"
                           ></use>
                         </svg>
                       </a>
@@ -208,7 +208,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-instagram-2"
+                            href="./images/icons/sprite.svg#icon-instagram-2"
                           ></use>
                         </svg>
                       </a>
@@ -217,7 +217,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-Group"
+                            href="./images/icons/sprite.svg#icon-Group"
                           ></use>
                         </svg>
                       </a>
@@ -226,7 +226,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-facebook-1"
+                            href="./images/icons/sprite.svg#icon-facebook-1"
                           ></use>
                         </svg>
                       </a>
@@ -235,7 +235,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-linkedin-1"
+                            href="./images/icons/sprite.svg#icon-linkedin-1"
                           ></use>
                         </svg>
                       </a>
@@ -261,7 +261,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-instagram-2"
+                            href="./images/icons/sprite.svg#icon-instagram-2"
                           ></use>
                         </svg>
                       </a>
@@ -270,7 +270,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-Group"
+                            href="./images/icons/sprite.svg#icon-Group"
                           ></use>
                         </svg>
                       </a>
@@ -279,7 +279,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-facebook-1"
+                            href="./images/icons/sprite.svg#icon-facebook-1"
                           ></use>
                         </svg>
                       </a>
@@ -288,7 +288,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-linkedin-1"
+                            href="./images/icons/sprite.svg#icon-linkedin-1"
                           ></use>
                         </svg>
                       </a>
@@ -314,7 +314,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-instagram-2"
+                            href="./images/icons/sprite.svg#icon-instagram-2"
                           ></use>
                         </svg>
                       </a>
@@ -323,7 +323,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-Group"
+                            href="./images/icons/sprite.svg#icon-Group"
                           ></use>
                         </svg>
                       </a>
@@ -332,7 +332,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-facebook-1"
+                            href="./images/icons/sprite.svg#icon-facebook-1"
                           ></use>
                         </svg>
                       </a>
@@ -341,7 +341,7 @@
                       <a href="#" class="social-list-link">
                         <svg width="12" height="12" class="social-list-icon">
                           <use
-                            href="./images/icons/sprite.svg.svg#icon-linkedin-1"
+                            href="./images/icons/sprite.svg#icon-linkedin-1"
                           ></use>
                         </svg>
                       </a>
