--- a/index.html
+++ b/index.html
@@ -74,35 +74,15 @@
       <!------------------------------Section 2---------------------------------------------->
 
       <section class="section-benefits">
-        <div class="benefits-icon">
-          <h2 class="visually-hidden">Out benefits icons</h2>
-          <ul class="icon-list">
-            <li class="icon-item">
-              <a href="#" class="benefits-link-icon"></a>
-              <svg width="64" height="64" class="benefits-social-icon"></svg>
-              <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
-            </li>
-            <li class="icon-item">
-              <a href="#" class="benefits-link-icon"></a>
-              <svg width="64" height="64" class="benefits-social-icon"></svg>
-              <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
-            </li>
-            <li class="icon-item">
-              <a href="" class="benefits-link-icon"></a>
-              <svg width="64" height="64" class="benefits-social-icon"></svg>
-              <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
-            </li>
-            <li class="icon-item">
-              <a href="" class="benefits-link-icon"></a>
-              <svg width="64" height="64" class="benefits-social-icon"></svg>
-              <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
-            </li>
-          </ul>
-        </div>
         <div class="container container-benefits">
           <h2 class="visually-hidden">Out benefits</h2>
           <ul class="menu-wrap menu-gap-next menu list">
             <li class="menu-item-next menu-item">
+              <div class="icon-container">
+                <a href="#" class="benefits-link-icon"></a>
+                <svg width="64" height="64" class="benefits-social-icon"></svg>
+                <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
+              </div>
               <h3 class="three-title">Strategy</h3>
               <p class="paragraph">
                 Our goal is to identify the business problem to walk away with
@@ -110,6 +90,11 @@
               </p>
             </li>
             <li class="menu-item-next menu-item">
+              <div class="icon-container">
+                <a href="#" class="benefits-link-icon"></a>
+                <svg width="64" height="64" class="benefits-social-icon"></svg>
+                <use href="./images/camila.jpg"></use>
+              </div>
               <h3 class="three-title">Punctuality</h3>
               <p class="paragraph">
                 Bring the key message to the brand's audience for the best price
@@ -117,6 +102,11 @@
               </p>
             </li>
             <li class="menu-item-next menu-item">
+              <div class="icon-container">
+                <a href="#" class="benefits-link-icon"></a>
+                <svg width="64" height="64" class="benefits-social-icon"></svg>
+                <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
+              </div>
               <h3 class="three-title">Diligence</h3>
               <p class="paragraph">
                 Research and confirm brands that present the strongest digital
@@ -124,6 +114,11 @@
               </p>
             </li>
             <li class="menu-item-next menu-item">
+              <div class="icon-container">
+                <a href="#" class="benefits-link-icon"></a>
+                <svg width="64" height="64" class="benefits-social-icon"></svg>
+                <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
+              </div>
               <h3 class="three-title">Technologies</h3>
               <p class="paragraph">
                 Design practice focused on digital experiences. We bring forth a
@@ -448,52 +443,51 @@
       </section>
     </main>
     <footer class="basement">
-      <div class="container container-endee">
-        <a class="link-basement logo-mein-studio link" href="./index.html"
-          >Web<span class="span-basement">Studio</span></a
-        >
+      <div class="container general-container">
+        <div class="container container-endee">
+          <a class="link-basement logo-mein-studio link" href="./index.html"
+            >Web<span class="span-basement">Studio</span></a
+          >
+          <p class="paragraph-basement">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container container-footer">
+          <h3 class="visually-hidden">Out benefits</h3>
+          <p class="paragraph paragraph-footer">Social media</p>
 
-        <p class="paragraph-basement">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="container container-footer">
-        <h3 class="visually-hidden">Out benefits</h3>
-        <p class="paragraph paragraph-footer">Social media</p>
-
-        <ul class="social-list social-list-center list link">
-          <li class="social-list-item">
-            <a href="#" class="social-list-link">
-              <svg class="social-list-icon">
-                <use
-                  href="./images/icons/sprite.svg.svg#icon-instagram-2"
-                ></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="#" class="social-list-link">
-              <svg class="social-list-icon">
-                <use href="./images/icons/sprite.svg.svg#icon-Group"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="#" class="social-list-link">
-              <svg class="social-list-icon">
-                <use href="./images/icons/sprite.svg.svg#icon-facebook-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-list-item">
-            <a href="#" class="social-list-link">
-              <svg class="social-list-icon">
-                <use href="./images/icons/sprite.svg.svg#icon-linkedin-1"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+          <ul class="social-list social-list-center list link">
+            <li class="social-list-item">
+              <a href="#" class="social-list-link">
+                <svg class="social-list-icon">
+                  <use href="./images/icons/sprite.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="#" class="social-list-link">
+                <svg class="social-list-icon">
+                  <use href="./images/icons/sprite.svg#icon-Group"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="#" class="social-list-link">
+                <svg class="social-list-icon">
+                  <use href="./images/icons/sprite.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list-item">
+              <a href="#" class="social-list-link">
+                <svg class="social-list-icon">
+                  <use href="./images/icons/sprite.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
