--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             >Web<span class="span-main">Studio</span></a
           >
           <ul class="menu list">
-            <li class="menu-item">
+            <li class="menu-item menu-item-erst">
               <a
                 class="menu-gap link main-link main-navi-link"
                 href="./index.html"
@@ -80,8 +80,9 @@
             <li class="menu-item-next menu-item">
               <div class="icon-container">
                 <a href="#" class="benefits-link-icon"></a>
-                <svg width="64" height="64" class="benefits-social-icon"></svg>
-                <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
+                <svg width="64" height="64" class="benefits-social-icon">
+                  <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
+                </svg>
               </div>
               <h3 class="three-title">Strategy</h3>
               <p class="paragraph">
@@ -92,8 +93,9 @@
             <li class="menu-item-next menu-item">
               <div class="icon-container">
                 <a href="#" class="benefits-link-icon"></a>
-                <svg width="64" height="64" class="benefits-social-icon"></svg>
-                <use href="./images/camila.jpg"></use>
+                <svg width="64" height="64" class="benefits-social-icon">
+                  <use href="./images/icons/sprite.svg#icon-clock-1"></use>
+                </svg>
               </div>
               <h3 class="three-title">Punctuality</h3>
               <p class="paragraph">
@@ -104,8 +106,9 @@
             <li class="menu-item-next menu-item">
               <div class="icon-container">
                 <a href="#" class="benefits-link-icon"></a>
-                <svg width="64" height="64" class="benefits-social-icon"></svg>
-                <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
+                <svg width="64" height="64" class="benefits-social-icon">
+                  <use href="./images/icons/sprite.svg#icon-diagram-1"></use>
+                </svg>
               </div>
               <h3 class="three-title">Diligence</h3>
               <p class="paragraph">
@@ -116,8 +119,9 @@
             <li class="menu-item-next menu-item">
               <div class="icon-container">
                 <a href="#" class="benefits-link-icon"></a>
-                <svg width="64" height="64" class="benefits-social-icon"></svg>
-                <use href="./images/icons/sprite.svg#icon-antenna-1"></use>
+                <svg width="64" height="64" class="benefits-social-icon">
+                  <use href="./images/icons/sprite.svg#icon-astronaut-1"></use>
+                </svg>
               </div>
               <h3 class="three-title">Technologies</h3>
               <p class="paragraph">
