--- a/index.html
+++ b/index.html
@@ -141,50 +141,46 @@
                 width="264"
                 height="260"
               />
-
               <div class="name-portfolio">
                 <h3 class="three-title-foto">Mark Guerrero</h3>
                 <p class="paragraph-foto">Product Designer</p>
-                <div class="container">
-                  <ul class="social-list list">
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-instagram-2"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-Group"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-facebook-1"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-linkedin-1"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use href="./images/icons/sprite.svg#icon-Group"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="menu-item menu-item-border">
@@ -198,46 +194,43 @@
               <div class="name-portfolio">
                 <h3 class="three-title-foto">Tom Ford</h3>
                 <p class="paragraph-foto">Frontend Developer</p>
-                <div class="container">
-                  <ul class="social-list list">
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-instagram-2"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-Group"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-facebook-1"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-linkedin-1"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use href="./images/icons/sprite.svg#icon-Group"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="menu-item menu-item-border">
@@ -251,46 +244,43 @@
               <div class="name-portfolio">
                 <h3 class="three-title-foto">Camila Garcia</h3>
                 <p class="paragraph-foto">Marketing</p>
-                <div class="container">
-                  <ul class="social-list list">
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-instagram-2"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-Group"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-facebook-1"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-linkedin-1"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use href="./images/icons/sprite.svg#icon-Group"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="menu-item menu-item-border">
@@ -304,46 +294,43 @@
               <div class="name-portfolio">
                 <h3 class="three-title-foto">Daniel Wilson</h3>
                 <p class="paragraph-foto">UI Designer</p>
-                <div class="container">
-                  <ul class="social-list list">
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-instagram-2"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-Group"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-facebook-1"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="social-list-item">
-                      <a href="#" class="social-list-link">
-                        <svg width="12" height="12" class="social-list-icon">
-                          <use
-                            href="./images/icons/sprite.svg#icon-linkedin-1"
-                          ></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
+
+                <ul class="social-list list">
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use href="./images/icons/sprite.svg#icon-Group"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a href="#" class="social-list-link">
+                      <svg width="12" height="12" class="social-list-icon">
+                        <use
+                          href="./images/icons/sprite.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
