--- a/index.html
+++ b/index.html
@@ -343,6 +343,11 @@
           <h2 class="title-portfolio">Our Portfolio</h2>
           <ul class="menu menu-wrap list">
             <li class="menu-item-new">
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <img
                 class="foto-google"
                 src="./images/images1/bankingapp.jpg"
@@ -350,6 +355,7 @@
                 width="360"
                 height="300"
               />
+
               <div class="name-portfolio-foto">
                 <h3 class="three-title">Banking App</h3>
                 <p class="paragraph">App</p>
@@ -375,6 +381,11 @@
               </div>
             </li>
             <li class="menu-item-new">
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <img
                 class="foto-google"
                 src="./images/images1/maditationapp.jpg"
@@ -388,6 +399,11 @@
               </div>
             </li>
             <li class="menu-item-new">
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <img
                 class="foto-google"
                 src="./images/images1/taxiservice.jpg"
@@ -401,6 +417,11 @@
               </div>
             </li>
             <li class="menu-item-new">
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <img
                 class="foto-google"
                 src="./images/images1/screenillustration.jpg"
@@ -414,6 +435,11 @@
               </div>
             </li>
             <li class="menu-item-new">
+              <div class="overlay">
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </div>
               <img
                 class="foto-google"
                 src="./images/images1/onlinecourses.jpg"
@@ -442,7 +468,6 @@
           </p>
         </div>
         <div class="container container-footer">
-          <h3 class="visually-hidden">Out benefits</h3>
           <p class="paragraph paragraph-footer">Social media</p>
 
           <ul class="social-list social-list-center list link">
