--- a/index.html
+++ b/index.html
@@ -344,17 +344,21 @@
           <ul class="menu menu-wrap list">
             <li class="menu-item-new">
               <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+                <p class="text-stylish">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
-              <img
-                class="foto-google"
-                src="./images/images1/bankingapp.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div>
+                <img
+                  class="foto-google"
+                  src="./images/images1/bankingapp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+              </div>
 
               <div class="name-portfolio-foto">
                 <h3 class="three-title">Banking App</h3>
@@ -469,7 +473,6 @@
         </div>
         <div class="container container-footer">
           <p class="paragraph paragraph-footer">Social media</p>
-
           <ul class="social-list social-list-center list link">
             <li class="social-list-item">
               <a href="#" class="social-list-link">
