--- a/index.html
+++ b/index.html
@@ -476,27 +476,27 @@
           <ul class="social-list social-list-center list link">
             <li class="social-list-item">
               <a href="#" class="social-list-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons/sprite.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
               <a href="#" class="social-list-link">
-                <svg class="social-list-icon">
+                <svg class="social-list-icon" width="24" height="24">
                   <use href="./images/icons/sprite.svg#icon-Group"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-list-link">
+              <a href="#" class="social-list-link" width="24" height="24">
                 <svg class="social-list-icon">
                   <use href="./images/icons/sprite.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-list-link">
+              <a href="#" class="social-list-link" width="24" height="24">
                 <svg class="social-list-icon">
                   <use href="./images/icons/sprite.svg#icon-linkedin-1"></use>
                 </svg>
