--- a/index.html
+++ b/index.html
@@ -472,7 +472,9 @@
           </p>
         </div>
         <div class="container container-footer">
-          <p class="paragraph paragraph-footer">Social media</p>
+          <p class="paragraph paragraph-footer paragraph-social">
+            Social media
+          </p>
           <ul class="social-list social-list-center list link">
             <li class="social-list-item">
               <a href="#" class="social-list-link">
@@ -489,15 +491,15 @@
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-list-link" width="24" height="24">
-                <svg class="footer-social-link">
+              <a href="#" class="social-list-link">
+                <svg class="footer-social-link" width="24" height="24">
                   <use href="./images/icons/sprite.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-list-link" width="24" height="24">
-                <svg class="footer-social-link">
+              <a href="#" class="social-list-link">
+                <svg class="footer-social-link" width="24" height="24">
                   <use href="./images/icons/sprite.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
