--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <section class="section-three-main">
         <div class="container container-three">
           <h2 class="title-two">Our Team</h2>
-          <ul class="menu-list list">
+          <ul class="menu-list menu-item-shadow list">
             <li class="menu-item menu-item-border">
               <img
                 class="foto"
@@ -341,25 +341,22 @@
       <section class="section-four-main">
         <div class="container container-four">
           <h2 class="title-portfolio">Our Portfolio</h2>
-          <ul class="menu menu-wrap list">
+          <ul class="menu menu-list-stylish menu-wrap list">
             <li class="menu-item-new">
               <div class="overlay">
-                <p class="text-stylish">
+                <p class="text-stylish overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
               </div>
-              <div class="">
-                <img
-                  class="foto-google"
-                  src="./images/images1/bankingapp.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
-              </div>
-
+              <img
+                class="foto-google"
+                src="./images/images1/bankingapp.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
               <div class="name-portfolio-foto">
                 <h3 class="three-title">Banking App</h3>
                 <p class="paragraph">App</p>
@@ -367,9 +364,11 @@
             </li>
             <li class="menu-item-new">
               <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+                <p class="text-stylish overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <img
                 class="foto-google"
@@ -386,9 +385,11 @@
             </li>
             <li class="menu-item-new">
               <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+                <p class="text-stylish overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <img
                 class="foto-google"
@@ -404,9 +405,11 @@
             </li>
             <li class="menu-item-new">
               <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+                <p class="text-stylish overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <img
                 class="foto-google"
@@ -422,9 +425,11 @@
             </li>
             <li class="menu-item-new">
               <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+                <p class="text-stylish overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <img
                 class="foto-google"
@@ -440,9 +445,11 @@
             </li>
             <li class="menu-item-new">
               <div class="overlay">
-                14 Stylish and User-Friendly App Design Concepts · Task Manager
-                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-                Storage App
+                <p class="text-stylish overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <img
                 class="foto-google"
