--- a/index.html
+++ b/index.html
@@ -343,40 +343,40 @@
           <h2 class="title-portfolio">Our Portfolio</h2>
           <ul class="menu menu-list-stylish menu-wrap list">
             <li class="menu-item-new">
-              <div class="overlay">
+              <div class="">
+                <img
+                  class="foto-google"
+                  src="./images/images1/bankingapp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
                 <p class="text-stylish overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
               </div>
-              <img
-                class="foto-google"
-                src="./images/images1/bankingapp.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
               <div class="name-portfolio-foto">
                 <h3 class="three-title">Banking App</h3>
                 <p class="paragraph">App</p>
               </div>
             </li>
             <li class="menu-item-new">
-              <div class="overlay">
+              <div class="">
+                <img
+                  class="foto-google"
+                  src="./images/images1/cashlesspayment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
                 <p class="text-stylish overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
               </div>
-              <img
-                class="foto-google"
-                src="./images/images1/cashlesspayment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
 
               <div class="name-portfolio-foto">
                 <h3 class="three-title">Cashless Payment</h3>
@@ -384,80 +384,84 @@
               </div>
             </li>
             <li class="menu-item-new">
-              <div class="overlay">
+              <div class="">
+                <img
+                  class="foto-google"
+                  src="./images/images1/maditationapp.jpg"
+                  alt="Maditation App"
+                  width="360"
+                  height="300"
+                />
                 <p class="text-stylish overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
               </div>
-              <img
-                class="foto-google"
-                src="./images/images1/maditationapp.jpg"
-                alt="Maditation App"
-                width="360"
-                height="300"
-              />
+
               <div class="name-portfolio-foto">
                 <h3 class="three-title">Meditation App</h3>
                 <p class="paragraph">App</p>
               </div>
             </li>
             <li class="menu-item-new">
-              <div class="overlay">
+              <div class="">
+                <img
+                  class="foto-google"
+                  src="./images/images1/taxiservice.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
                 <p class="text-stylish overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
               </div>
-              <img
-                class="foto-google"
-                src="./images/images1/taxiservice.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+
               <div class="name-portfolio-foto">
                 <h3 class="three-title">Taxi Service</h3>
                 <p class="paragraph">Marketing</p>
               </div>
             </li>
             <li class="menu-item-new">
-              <div class="overlay">
+              <div class="">
+                <img
+                  class="foto-google"
+                  src="./images/images1/screenillustration.jpg"
+                  alt="Screen Illustration"
+                  width="360"
+                  height="300"
+                />
                 <p class="text-stylish overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
               </div>
-              <img
-                class="foto-google"
-                src="./images/images1/screenillustration.jpg"
-                alt="Screen Illustration"
-                width="360"
-                height="300"
-              />
+
               <div class="name-portfolio-foto">
                 <h3 class="three-title">Screen Illustrations</h3>
                 <p class="paragraph">Design</p>
               </div>
             </li>
             <li class="menu-item-new">
-              <div class="overlay">
+              <div class="">
+                <img
+                  class="foto-google"
+                  src="./images/images1/onlinecourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
                 <p class="text-stylish overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
                 </p>
               </div>
-              <img
-                class="foto-google"
-                src="./images/images1/onlinecourses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+
               <div class="name-portfolio-foto">
                 <h3 class="three-title">Online Courses</h3>
                 <p class="paragraph">Marketing</p>
@@ -484,28 +488,28 @@
           </p>
           <ul class="social-list social-list-center list link">
             <li class="social-list-item">
-              <a href="#" class="social-list-link">
+              <a href="#" class="social-list-link footer-link">
                 <svg class="footer-social-link" width="24" height="24">
                   <use href="./images/icons/sprite.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-list-link">
+              <a href="#" class="social-list-link footer-link">
                 <svg class="footer-social-link" width="24" height="24">
                   <use href="./images/icons/sprite.svg#icon-Group"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-list-link">
+              <a href="#" class="social-list-link footer-link">
                 <svg class="footer-social-link" width="24" height="24">
                   <use href="./images/icons/sprite.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list-item">
-              <a href="#" class="social-list-link">
+              <a href="#" class="social-list-link footer-link">
                 <svg class="footer-social-link" width="24" height="24">
                   <use href="./images/icons/sprite.svg#icon-linkedin-1"></use>
                 </svg>
