--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           <h2 class="title-portfolio">Our Portfolio</h2>
           <ul class="menu menu-list-stylish menu-wrap list">
             <li class="menu-item-new">
-              <div class="">
+              <div class="container-img">
                 <img
                   class="foto-google"
                   src="./images/images1/bankingapp.jpg"
@@ -363,7 +363,7 @@
               </div>
             </li>
             <li class="menu-item-new">
-              <div class="">
+              <div class="container-img">
                 <img
                   class="foto-google"
                   src="./images/images1/cashlesspayment.jpg"
@@ -384,7 +384,7 @@
               </div>
             </li>
             <li class="menu-item-new">
-              <div class="">
+              <div class="container-img">
                 <img
                   class="foto-google"
                   src="./images/images1/maditationapp.jpg"
@@ -405,7 +405,7 @@
               </div>
             </li>
             <li class="menu-item-new">
-              <div class="">
+              <div class="container-img">
                 <img
                   class="foto-google"
                   src="./images/images1/taxiservice.jpg"
@@ -426,7 +426,7 @@
               </div>
             </li>
             <li class="menu-item-new">
-              <div class="">
+              <div class="container-img">
                 <img
                   class="foto-google"
                   src="./images/images1/screenillustration.jpg"
@@ -447,7 +447,7 @@
               </div>
             </li>
             <li class="menu-item-new">
-              <div class="">
+              <div class="container-img">
                 <img
                   class="foto-google"
                   src="./images/images1/onlinecourses.jpg"
