--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
-                src="./images/mark.jpg"
+                src="./images/icons/images/mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
@@ -149,9 +149,7 @@
                   <li class="social-list-item">
                     <a href="#" class="social-list-link">
                       <svg width="16" height="16" class="social-list-icon">
-                        <use
-                          href="./images/icons/sprite.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/sprite.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -186,7 +184,7 @@
             <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
-                src="./images/tom.jpg"
+                src="./images/icons/images/tom.jpg"
                 alt="Tom Ford"
                 width="264"
                 height="260"
@@ -236,7 +234,7 @@
             <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
-                src="./images/camila.jpg"
+                src="./images/icons/images/camila.jpg"
                 alt="Camila Garcia"
                 width="264"
                 height="260"
@@ -286,7 +284,7 @@
             <li class="menu-item menu-item-shadow menu-item-border">
               <img
                 class="foto"
-                src="./images/daniel.jpg"
+                src="./images/icons/images/daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
                 height="260"
@@ -346,7 +344,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/images1/bankingapp.jpg"
+                  src="./images/icons/images/bankingapp.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -366,7 +364,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/images1/cashlesspayment.jpg"
+                  src="./images/icons/images/cashlesspayment.jpg"
                   alt="Cashless Payment"
                   width="360"
                   height="300"
@@ -387,7 +385,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/images1/maditationapp.jpg"
+                  src="./images/icons/images/maditationapp.jpg"
                   alt="Maditation App"
                   width="360"
                   height="300"
@@ -408,7 +406,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/images1/taxiservice.jpg"
+                  src="./images/icons/images/taxiservice.jpg"
                   alt="Taxi Service"
                   width="360"
                   height="300"
@@ -429,7 +427,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/images1/screenillustration.jpg"
+                  src="./images/icons/images/screenillustration.jpg"
                   alt="Screen Illustration"
                   width="360"
                   height="300"
@@ -450,7 +448,7 @@
               <div class="container-img">
                 <img
                   class="foto-google"
-                  src="./images/images1/onlinecourses.jpg"
+                  src="./images/icons/images/onlinecourses.jpg"
                   alt="Online Courses"
                   width="360"
                   height="300"
